--- a/.github/workflows/weekly-release.yaml
+++ b/.github/workflows/weekly-release.yaml
@@ -62,13 +62,13 @@ jobs:
         uses: papeloto/action-zip@v1
         if: ${{ matrix.os == 'windows-latest'}}
         with:
-          files: Weasel.exe Weasel Weasel.so config.xml
+          files: Weasel.exe config.xml
           dest: pyinstaller_output.zip
 
       - name: Compress the output files for MacOS/Linux
         if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'}}
         run: |
-          tar -czvf pyinstaller_output.tar.gz Weasel.exe Weasel Weasel.so config.xml
+          tar -czvf pyinstaller_output.tar.gz Weasel config.xml
           
       - name: Upload the zipped Windows executable to the Release
         uses: actions/upload-release-asset@v1
