--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ lmfit>=1.0.0
 matplotlib==3.2.2
 nibabel>=3.0.2
 numpy>=1.17.3
-opencv-python==3.4.13.47
+opencv-python>=4.2.0.32
 openpyxl>=3.0.2
 pandas>=1.0.0,<1.2
 pdoc3>=0.10.0
